[metadata]
name = pyphenopop
version = 0.0.1
description = Phenotypic deconvolution in heterogeneous cancer cell populations using drug screen data
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ocbe-uio/pyPhenoPop

author = Leonard Schmiester, Polina Arsenteva, Even Myklebust, Alvaro Köhn-Luque
author_email = leonargs@uio.no, apolinaria10@mail.ru, e.m.myklebust@medisin.uio.no, a.k.luque@medisin.uio.no

license = MIT
license_files = LICENSE


classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires =
    matplotlib == 3.5.3
    scipy
    numpy
    pandas
    tqdm


python_requires = >=3.6.0


packages = find:

[options.packages.find]
include = pyphenopop*
