[metadata]
name = pyphenopop
version = 0.0.2
description = Phenotypic deconvolution in heterogeneous cancer cell populations using drug screen data
long_description = file: README.md
long_description_content_type = text/markdown

url = https://github.com/ocbe-uio/pyPhenoPop

author = Leonard Schmiester, Polina Arsenteva, Even Myklebust, Alvaro Köhn-Luque
author_email = leonargs@uio.no, apolinaria10@mail.ru, e.m.myklebust@medisin.uio.no, a.k.luque@medisin.uio.no

license = MIT
license_files = LICENSE


classifiers=
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
install_requires =
    matplotlib == 3.5.3
    scipy >= 1.9.3
    numpy >= 1.23.4
    pandas >= 1.5.1
    tqdm >= 4.64.1


[options.extras_require]
dev =
    pytest
    pytest-cov

python_requires = >=3.8.0


packages = find:

[options.packages.find]
include = pyphenopop*
